--- a/dev.css
+++ b/dev.css
@@ -184,7 +184,14 @@ p {
   align-items: center;
   justify-content: center;
 }
-
+.animate__fadeInDown
+{
+    animation-delay: 0.5s;
+}
+.animate__zoomIn
+{
+    animation-delay: 1s;
+}
 
 
 
